app/containers/snippetPanel/index.scss
.snippet-panel {
  float: right;
  width: 100%;
  overflow: overlay;
  height: 100vh;
  visibility: hidden;
}

.snippet-panel-immersive {
  @extend .snippet-panel;
  width: 100%;

  .font-style-base {
    font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
    font-size: 13px;
  }

  .welcome-section {
    @extend .font-style-base;
    font-size: 15px;
    text-align: center;
    height: 100vh;
  }
}

.snippet-panel-content,
.snippet-panel:hover,
.snippet-panel-immersive:hover {
  visibility: visible;
}

.snippet-panel {
  .font-style-base {
    font-family: Consolas, Menlo, Monaco, "Courier New", monospace;
    font-size: 13px;
  }

  .welcome-section {
    @extend .font-style-base;
    font-size: 15px;
    text-align: center;
    height: 100vh;
  }
}

